Fit page to single screen and fix responsiveness on small phone screens

--- a/css/style.css
+++ b/css/style.css
@@ -22,15 +22,15 @@ body:before {
 	right: 0;
 	display: block;
 	background: #063651; /* For browsers that do not support gradients */
-	background: -webkit-linear-gradient(#020913 0%, #00121E 19%, #001F3A 28%, #063651 56%, #2B546B 71%, #827C6C 100%); 
+	background: -webkit-linear-gradient(#020913 0%, #00121E 19%, #001F3A 28%, #063651 56%, #2B546B 71%, #827C6C 100%);
 	background: -o-linear-gradient(#020913 0%, #00121E 19%, #001F3A 28%, #063651 56%, #2B546B 71%, #827C6C 100%);
-	background: -moz-linear-gradient(#020913 0%, #00121E 19%, #001F3A 28%, #063651 56%, #2B546B 71%, #827C6C 100%); 
+	background: -moz-linear-gradient(#020913 0%, #00121E 19%, #001F3A 28%, #063651 56%, #2B546B 71%, #827C6C 100%);
 	background: linear-gradient(#020913 0%, #00121E 19%, #001F3A 28%, #063651 56%, #2B546B 71%, #827C6C 100%); /* Standard syntax */
 	content: "";
 }
 
 body {
-	height: 100%;
+	height: 99%;
     color: white;
     font-family: Biko, sans-serif, "Times New Roman";
 }
@@ -100,7 +100,7 @@ h5 {
 }
 
 .footer, .wrapper:after {
-  height: 142px; 
+  height: 142px;
 }
 
 .content {
@@ -149,8 +149,25 @@ a:hover {
 	margin-top: 0.5em;
 }
 
-/* Phone screen sizes */
-@media only screen and (max-device-width: 480px) {
+/* Small phone screen sizes */
+@media only screen and (max-device-width: 411px) {
+	h1 {
+		font-size: 2rem;
+	}
+	h2 {
+		font-size: 1.15rem;
+	}
+	h5 {
+		font-size: 0.85rem;
+	}
+	.email-input {
+		padding: 0 10px 0 10px;
+		max-width: 90%;
+	}
+}
+
+/* Large phone screen sizes */
+@media only screen and (max-device-width: 480px) and (min-device-width: 412px) {
 	h2 {
 		font-size: 1.5rem;
 	}
@@ -188,5 +205,3 @@ a:hover {
 		width: 500px;
 	}
 }
-
-
